WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100158
popup menus don't behave correctly when using multiple monitors
https://bugs.webkit.org/show_bug.cgi?id=100158
Summary
popup menus don't behave correctly when using multiple monitors
Roger Fong
Reported
2012-10-23 13:40:24 PDT
Need to add screen.x() to the popup menu position check to account for having multiple monitors.
Attachments
patch
(1.28 KB, patch)
2012-10-23 13:54 PDT
,
Roger Fong
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Roger Fong
Comment 1
2012-10-23 13:54:19 PDT
Created
attachment 170229
[details]
patch
Tim Horton
Comment 2
2012-10-23 14:27:41 PDT
Comment on
attachment 170229
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=170229&action=review
> Source/WebCore/ChangeLog:7 > +
A few more words here would be nice.
> Source/WebCore/ChangeLog:8 > + * platform/win/PopupMenuWin.cpp:
You should say why this isn’t testable (No new tests because...)
Tim Horton
Comment 3
2012-11-28 11:36:00 PST
http://trac.webkit.org/changeset/132271
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug