[Win] Popup menus positioning needs to take multiple monitors into account. https://bugs.webkit.org/show_bug.cgi?id=100158

Reviewed by Timothy Horton.

Add screen.x() to repositioning check to account for position of current monitor.

* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::calculatePositionAndSize):

Canonical link: https://commits.webkit.org/118186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132271 268f45cc-cd09-0410-ab3c-d52691b4dbfc